# hackerdays-team-1

./: Cargo.toml  generate-data.sh
src/: channels.rs  dto.rs  main.rs  messages.rs  model.rs  server_sync.rs  systems.rs  todos.rs  users.rs
src/routes/: channels.rs  messages.rs  mod.rs  systems.rs  users.rs
