[package]
name = "hackerchat-1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.12"
help = "0.0.0"
serde = { version = "1.0.158", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.3.0", features = ["serde"] }
